--- a/index.html
+++ b/index.html
@@ -1,31 +1,100 @@
-<!DOCTYPE html
-<html lang="fr">>
- <head>
-    <meta charset="UTF-8">
-    <title>secureBankcheck -Accueil</title>
-    <link rel="stylsheet"href="css/style.css">
-    </head>
-    <body>
-        <head>
-            <h1>Securebankcheck</h1>
-            <h2>protégez vos accès bancaire en ligne </h2>
 
-            </header>
-            <main>
-
-                <p>
-        bienvenue sur secureBankcheck,votre assistant pour protégez votre compte bancaire en ligne.<br>
-    Analysez vos mot de passe,verifiez l'authencité des sites bancaires et decouvrez nos conseils des sécurité.
-</p>
-<ul>
-   <li><a href="password-checker.html">vérifiez la fore de votre mot de passe </a></li>
-   <li><a href="bank-url-checker.html">verifiez l'authencité du site de votre banque</a></li>
-   <li><a href ="conseil.html">Découvrez nos conseils de sécurité</a></li>
-      </ul>
- </main>
- <footer>
-
-
-    
-    <p>&copy;2025 Securebankcheck</p>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Secure Bank - Accueil</title>
+  <link rel="stylesheet" href="accueil.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body>
+  <header>
+    <div class="logo">
+      <i class="fas fa-shield-alt"></i>
+      <span>Secure Bank</span>
+    </div>
+    <nav>
+      <a href="login.html"><i class="fas fa-user"></i> Connexion</a>
+      <a href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
+    </nav>
+  </header>
+  <section class="hero">
+    <h1>Bienvenue chez Secure Bank</h1>
+    <p>Gérez vos comptes en toute sécurité, où que vous soyez.</p>
+    <a href="login.html" class="cta"><i class="fas fa-sign-in-alt"></i> Accéder à mon compte</a>
+  </section>
+  <section class="services">
+    <h2>Nos services</h2>
+    <div class="service-list">
+      <div class="service">
+        <i class="fas fa-wallet"></i>
+        <h3>Consultation de solde</h3>
+        <p>Consultez le solde de vos comptes en temps réel.</p>
+      </div>
+      <div class="service">
+        <i class="fas fa-exchange-alt"></i>
+        <h3>Virements sécurisés</h3>
+        <p>Effectuez vos transferts en toute sérénité.</p>
+      </div>
+      <div class="service">
+        <i class="fas fa-lock"></i>
+        <h3>Sécurité avancée</h3>
+        <p>Vos données sont protégées par des technologies de pointe.</p>
+      </div>
+    </div>
+  </section>
+  <footer>
+    &copy; 2025 Secure Bank. Tous droits réservés.
+  </footer>
+</body>
+</html><!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Secure Bank - Accueil</title>
+  <link rel="stylesheet" href="accueil.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body>
+  <header>
+    <div class="logo">
+      <i class="fas fa-shield-alt"></i>
+      <span>Secure Bank</span>
+    </div>
+    <nav>
+      <a href="login.html"><i class="fas fa-user"></i> Connexion</a>
+      <a href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
+    </nav>
+  </header>
+  <section class="hero">
+    <h1>Bienvenue chez Secure Bank</h1>
+    <p>Gérez vos comptes en toute sécurité, où que vous soyez.</p>
+    <a href="login.html" class="cta"><i class="fas fa-sign-in-alt"></i> Accéder à mon compte</a>
+  </section>
+  <section class="services">
+    <h2>Nos services</h2>
+    <div class="service-list">
+      <div class="service">
+        <i class="fas fa-wallet"></i>
+        <h3>Consultation de solde</h3>
+        <p>Consultez le solde de vos comptes en temps réel.</p>
+      </div>
+      <div class="service">
+        <i class="fas fa-exchange-alt"></i>
+        <h3>Virements sécurisés</h3>
+        <p>Effectuez vos transferts en toute sérénité.</p>
+      </div>
+      <div class="service">
+        <i class="fas fa-lock"></i>
+        <h3>Sécurité avancée</h3>
+        <p>Vos données sont protégées par des technologies de pointe.</p>
+      </div>
+    </div>
+  </section>
+  <footer>
+    &copy; 2025 Secure Bank. Tous droits réservés.
+  </footer>
+</body>
 </html>
