--- a/conseil.html
+++ b/conseil.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <h2>conseils de sécurité bancaire</h2>
-        <ul class="tips-list"
+        <ul class="tips-list">
             <li>
                 <strong>utilisez un mot de passe fort :</strong>
                 combinez lettres majuscules, minuscules,chiffres et caractè spéciaux. ne jamais réutiliser le meme mot de passe sur plusieur sites.
